# langchain-agent-lab

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
docs/: ecosystem-map.md  implementation-plan.md  learning-path.md  quality-gate.md  spec.md
docs/concepts/: README.md  citation-assurance.md  langgraph-edges.md  source-provenance.md  tracing-boundary.md  transport-timeouts.md
examples/: __init__.py  deep_agent.py  langchain_agent.py  langgraph_workflow.py  langsmith_trace.py
src/agent_learn/: __init__.py  adapters.py  bootstrap.py  catalog.py  cli.py  config.py  domain.py  evaluation.py  research.py  runtime.py  security.py  tools.py  trace_demo.py  ui.py
tests/examples/: test_examples.py
tests/integration/: test_cli.py  test_eval_cli.py  test_trace_cli.py
tests/live/: test_live_boundaries.py
tests/ui/: test_app.py
tests/unit/: test_adapters.py  test_bootstrap.py  test_catalog.py  test_config.py  test_domain.py  test_evaluation.py  test_research.py  test_security.py  test_tools.py
